{
  "version": 4,
  "terraform_version": "0.13.1",
  "serial": 56,
  "lineage": "4d85a047-89ff-29a0-1b11-3fbd29c8bebe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:795509366146:internet-gateway/igw-0978ee7d2342dfb8d",
            "id": "igw-0978ee7d2342dfb8d",
            "owner_id": "795509366146",
            "tags": {
              "Name": "terraform-eks-main"
            },
            "vpc_id": "vpc-036591940e164b5c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cc238e75dae1dedf",
            "owner_id": "795509366146",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0978ee7d2342dfb8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-036591940e164b5c9"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0592d62b1bd53b084",
            "route_table_id": "rtb-0cc238e75dae1dedf",
            "subnet_id": "subnet-0953d42caa89579ca"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c727737a72a843",
            "route_table_id": "rtb-0cc238e75dae1dedf",
            "subnet_id": "subnet-0fe1e939194be32d8"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:795509366146:security-group/sg-0b93c5a7a592e071d",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b93c5a7a592e071d",
            "ingress": [],
            "name": "terraform-eks-main-cluster",
            "name_prefix": "",
            "owner_id": "795509366146",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-main"
            },
            "timeouts": null,
            "vpc_id": "vpc-036591940e164b5c9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "218.212.243.66/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1879026870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b93c5a7a592e071d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.main-cluster",
            "aws_vpc.main",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:795509366146:subnet/subnet-0953d42caa89579ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0953d42caa89579ca",
            "map_public_ip_on_launch": true,
            "owner_id": "795509366146",
            "tags": {
              "Name": "terraform-eks-main-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-036591940e164b5c9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:795509366146:subnet/subnet-0fe1e939194be32d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fe1e939194be32d8",
            "map_public_ip_on_launch": true,
            "owner_id": "795509366146",
            "tags": {
              "Name": "terraform-eks-main-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-036591940e164b5c9"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:795509366146:vpc/vpc-036591940e164b5c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f6f41c80b97da035",
            "default_route_table_id": "rtb-026858a9ab490e4a1",
            "default_security_group_id": "sg-08d115a5e30d24fba",
            "dhcp_options_id": "dopt-47749121",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-036591940e164b5c9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-026858a9ab490e4a1",
            "owner_id": "795509366146",
            "tags": {
              "Name": "terraform-eks-main-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}